--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master, feature/github_action ]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
 
@@ -28,18 +28,29 @@ jobs:
       # Note: This workflow uses the latest stable version of the Dart SDK.
       # You can specify other versions if desired, see documentation here:
       # https://github.com/dart-lang/setup-dart/blob/main/README.md
-       - uses: dart-lang/setup-dart@v1
+      - uses: dart-lang/setup-dart@v1
 
       - name: Install dependencies
         run: dart pub get
 
-      # Verify the use of 'dart format' on each commit.
-       - name: Verify formatting
-         run: dart format -o none --set-exit-if-changed .
+      # Verify the use of 'dart format' on each commit
+      - name: Verify formatting
+        run: dart format -o none --set-exit-if-changed .
 
-      # Consider passing '--fatal-infos' for slightly stricter analysis.
+      # Consider passing '--fatal-infos' for slightly stricter analysis
       - name: Analyze project source
         run: dart analyze --fatal-infos
+
+      # Ensure your shell script is executable
+      - name: Make shell script write_credentials.sh executable
+        run: chmod +x .github/workflows/write_credentials.sh
+
+      # Run bash script in order to provide test credentials
+      - name: Write down test credentials
+        run:  ./.github/workflows/write_credentials.sh
+        env:
+          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
 
       # Your project will need to have tests in test/ and a dependency on
       # package:test for this step to succeed. Note that Flutter projects will
